--- a/src/components/ItemProduct/ItemProduct.scss
+++ b/src/components/ItemProduct/ItemProduct.scss
@@ -13,5 +13,23 @@
     display: flex;
     justify-content: center;
     height: 50%;
+    margin: 15px;
     
 }
+
+.item-product{
+    display: flex;
+    flex-flow: column wrap;
+    border: solid;
+    margin: 15px;
+    padding: 15px;
+    .card{
+        margin: 10px;
+        padding: 10px;
+        border: groove;
+    }
+    .card p{
+        font-weight: bold;
+    }
+}
+
