--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -30,10 +30,11 @@
         list-style: none;
         margin: 30px;
 
-        li {
+        button {
             border: outset;
             text-decoration: none;
             margin: 4px;
+            padding: 10px;
             color:rgba(255, 0, 0, 0.671);
 
             &:hover {
