--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,13 +1,15 @@
-.modal-custom{
+.modal-custom {
     position: fixed;
     z-index: 1;
-    top: 60%;
-    left: 5%;
-    transform: translate(-50% -50%);
-    background-color: rgba(255, 255, 255, 0.459);
-    width: 500px;
-    height: 500px;
-    box-shadow: 1px 5px 5px black;
-    border-radius: 10px;
-    padding: 50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(29, 28, 28, 0.753);
+    width: 65vw;
+    height: 65vh;
+    color:white;
+    box-shadow: 1px 5px 5px #00000047;
+    border-radius: 5px;
+    padding: 20px;
+    overflow: hidden;
 }
