Add Sales and scss

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -8,5 +8,6 @@
         background-color:black;
         color: #CCC;
         font-family:Verdana,Tahoma, sans-serif;
+        gap: 25px;
     }
 }
