--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,13 +1,21 @@
-.btn-buy{
+.cart-container {
+    background: linear-gradient(107.9deg, rgba(255, 255, 255, 0.123) 9.7%, rgba(255, 255, 255, 0.49) 88.76%);
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(40px);
+    border-radius: 40px;
+}
+
+.btn-buy {
     display: flex;
     justify-content: center;
     height: 50%;
     margin: 15px;
-    button{
+
+    button {
         border: 1px solid #CCC;
-        background-color:black;
+        background-color: black;
         color: #CCC;
-        font-family:Verdana,Tahoma, sans-serif;
+        font-family: Verdana, Tahoma, sans-serif;
         gap: 25px;
     }
 }
